Taking a better and effective way to consider uncertainty of future confirmed cases. Instead of normal std, lognormal std (with shift +0.5 for rouding effect of zero case) for confirmed cases for different case scales. For Rt distriubtion, taking shifted lognormal distribution instead of normal distribution to prevent density at deep negative Rt.

--- a/doc/Rt-Malaysia.ipynb
+++ b/doc/Rt-Malaysia.ipynb
@@ -8,6 +8,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -731,6 +732,13 @@
     "\n",
     "\\end{thebibliography}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
