--- a/doc/Rt-Malaysia.ipynb
+++ b/doc/Rt-Malaysia.ipynb
@@ -31,7 +31,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where we use Weibull distribution of $a=1.741, b=8.573$ for $d_{CO}(t)$ <cite data-cite=\"NishiuraGitHub\">[1]</cite>.\n",
     "But we use another way to consider uncertainty of estimation by Becker <cite data-cite=\"becker1997\">[2]</cite>. In this method, confirmed cases $C(t)$ is considered as a realization of stochasitc variable of which expectation is $\\mu_t$. $C(t)$ is decomposed into $n_{ts}$ being the number of onset at $s$, confirmed at $t$. Similarly, $O(s)$ is a realization of stochastic variable with its expectation $\\theta_s$. Then the expecation of $n_{ts}$ is $\\theta_s d_{OC}(t-s)$ and"
    ]
   },
@@ -48,6 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "where we use Weibull distribution of $a=1.741, b=8.573$ for $d_{OC}(t)$ <cite data-cite=\"NishiuraGitHub\">[1]</cite>.\n",
     "Suppose that a process for $n_{ts}$ obeys Poisson distribution, maximum likelihood function is"
    ]
   },
