- Updated doc for Rt to include a method of right side uncertainty - FIxing a formula of right censorship

--- a/doc/Rt-Malaysia.ipynb
+++ b/doc/Rt-Malaysia.ipynb
@@ -8,13 +8,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Data processing\n",
     "## Back projection from confirmed cases to onset\n",
-    "In Malaysia, as far as the author concerns, only confirmed cases is available and no onset data is provided officially. Also, no distinction between domestic and import cases.\n",
+    "In Malaysia, as far as the author concerns, only confirmed cases is available and no onset data is provided officially. Also, no distinction between domestic and import cases (There is daily new imported and domestic statistics at a blog of Health Director in Malaysia, but it is not from day one. Thus it is a bit challenging to create a complete data set.)\n",
     "First, we backproject the confirmed cases to onset estimation. A quick way is to convolute the confirmed cases with delay distribution from confirmed to onset cases. Let $C(t)$, $O(t)$, and $d_{CO}(t)$ be confirmed, onset cases and the delay distribution function. Then"
    ]
   },
@@ -72,7 +71,8 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "\\ell(\\{\\mu_t\\},\\{\\theta_s\\};\\{n_{ts}\\})=\\ln{L}=\\sum^{\\tau}_{t=0} \\sum^{t}_{s=0}\\left[-\\theta_s d_{OC}(t-s))-\\ln{n_{ts}!} +n_{ts}\\ln{\\theta_s}+n_{ts}\\ln{d_{OC}(t-s)}\\right]\n",
+    "\\ell(\\{\\mu_t\\},\\{\\theta_s\\};\\{n_{ts}\\})=\\ln{L}\\\\\n",
+    "=\\sum^{\\tau}_{t=0} \\sum^{t}_{s=0}\\left[-\\theta_s d_{OC}(t-s))-\\ln{n_{ts}!} +n_{ts}\\ln{\\theta_s}+n_{ts}\\ln{d_{OC}(t-s)}\\right]\n",
     "\\end{equation}"
    ]
   },
@@ -137,7 +137,8 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "KL(\\{q(\\{n_{ts}\\})\\}| \\{p\\}) \\ge -\\ln \\sum_{\\{n_{ts}\\}} {q(\\{n_{ts}\\})\\frac{p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta_s\\})}{q(\\{n_{ts}\\})}}=-\\ln \\sum_{\\{n_{ts}\\}} p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta_s\\})=0\n",
+    "KL(\\{q(\\{n_{ts}\\})\\}| \\{p\\}) \\ge -\\ln \\sum_{\\{n_{ts}\\}} {q(\\{n_{ts}\\})\\frac{p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta_s\\})}{q(\\{n_{ts}\\})}}\\\\\n",
+    "=-\\ln \\sum_{\\{n_{ts}\\}} p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta_s\\})=0\n",
     "\\end{equation}"
    ]
   },
@@ -153,7 +154,8 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "KL(\\{q(\\{n_{ts}\\})\\}| \\{p\\}) = -\\mathcal{L}+\\sum_{\\{n_{ts}\\}} {q(\\{n_{ts}\\}) \\ln p(\\{O(t)\\}|\\{O(t)\\},\\{\\theta_s\\})}=-\\mathcal{L}+\\ell\n",
+    "KL(\\{q(\\{n_{ts}\\})\\}| \\{p\\}) = -\\mathcal{L}+\\sum_{\\{n_{ts}\\}} {q(\\{n_{ts}\\}) \\ln p(\\{O(t)\\}|\\{O(t)\\},\\{\\theta_s\\})}\\\\\n",
+    "=-\\mathcal{L}+\\ell\n",
     "\\end{equation}"
    ]
   },
@@ -217,7 +219,9 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "\\mathcal{L}(\\{p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta^{j}_s\\})\\}, \\{\\theta_s\\}) = \\sum_{\\{n_{ts}\\}} {p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta^{j}_s\\}) \\ln \\frac{p(\\{O(t)\\},\\{n_{ts}\\}|\\{\\theta_s\\})}{p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta^{j}_s\\})}}\\\\=\\sum_{\\{n_{ts}\\}} {p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta^{j}_s\\}) \\ln p(\\{O(t)\\},\\{n_{ts}\\}|\\{\\theta_s\\})}+const\n",
+    "\\mathcal{L}(\\{p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta^{j}_s\\})\\}, \\{\\theta_s\\})\\\\\n",
+    "= \\sum_{\\{n_{ts}\\}} {p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta^{j}_s\\}) \\ln \\frac{p(\\{O(t)\\},\\{n_{ts}\\}|\\{\\theta_s\\})}{p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta^{j}_s\\})}}\\\\\n",
+    "=\\sum_{\\{n_{ts}\\}} {p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta^{j}_s\\}) \\ln p(\\{O(t)\\},\\{n_{ts}\\}|\\{\\theta_s\\})}+const\n",
     "\\end{equation}"
    ]
   },
@@ -281,7 +285,8 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "\\ln p(\\{O(t)\\},\\{n_{ts}\\}|\\{\\theta_s\\})=\\sum^{\\tau}_{t=0} \\sum^{t}_{s=0}[-\\theta_s d_{OC}(t-s))-\\ln{n_{ts}!} +n_{ts}\\ln{\\theta_s}+n_{ts}\\ln{d_{OC}(t-s)}]\n",
+    "\\ln p(\\{O(t)\\},\\{n_{ts}\\}|\\{\\theta_s\\})\\\\\n",
+    "=\\sum^{\\tau}_{t=0} \\sum^{t}_{s=0}[-\\theta_s d_{OC}(t-s))-\\ln{n_{ts}!} +n_{ts}\\ln{\\theta_s}+n_{ts}\\ln{d_{OC}(t-s)}]\n",
     "\\end{equation}"
    ]
   },
@@ -298,7 +303,8 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta^{j}_s\\}) =\\prod^{\\tau}_{t=0} 1_{\\sum^{t}_{s=0}{n_{ts}}=O(t)}\\prod^{t}_{s=0} \\frac{\\exp(-\\theta^j_s d_{OC}(t-s))}{n_{ts}!} (\\theta^j_s d_{OC}(t-s))^{n_{ts}}\n",
+    "p(\\{n_{ts}\\}|\\{O(t)\\},\\{\\theta^{j}_s\\}) \\\\\n",
+    "=\\prod^{\\tau}_{t=0} 1_{\\sum^{t}_{s=0}{n_{ts}}=O(t)}\\prod^{t}_{s=0} \\frac{\\exp(-\\theta^j_s d_{OC}(t-s))}{n_{ts}!} (\\theta^j_s d_{OC}(t-s))^{n_{ts}}\n",
     "\\end{equation}\n"
    ]
   },
@@ -473,7 +479,8 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "P(I_{domestic}(t)|R_t)=\\exp\\left(-R_t \\sum^t_{\\tau=1}{I_{total}(t-\\tau)g(\\tau)}\\right)\\frac{1}{(I_{domestic}(t))!} (I_{domestic}(t))^{R_t \\sum^t_{\\tau=1}{I_{total}(t-\\tau)g(\\tau)}}\n",
+    "P(I_{domestic}(t)|R_t)\\\\\n",
+    "=\\exp\\left(-R_t \\sum^t_{\\tau=1}{I_{total}(t-\\tau)g(\\tau)}\\right)\\frac{1}{(I_{domestic}(t))!} (I_{domestic}(t))^{R_t \\sum^t_{\\tau=1}{I_{total}(t-\\tau)g(\\tau)}}\n",
     "\\end{equation}"
    ]
   },
@@ -533,7 +540,8 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "P(I(s)|R_s, \\{I(\\tau),\\tau\\le s-1\\})=\\exp\\left(-R_s \\sum^s_{\\tau=1}{I(s-\\tau)g(\\tau)}\\right)\\frac{1}{(I(s))!} (I(s))^{R_s \\sum^s_{\\tau=1}{I(s-\\tau)g(\\tau)}}\n",
+    "P(I(s)|R_s, \\{I(\\tau),\\tau\\le s-1\\})\\\\\n",
+    "=\\exp\\left(-R_s \\sum^s_{\\tau=1}{I(s-\\tau)g(\\tau)}\\right)\\frac{1}{(I(s))!} (I(s))^{R_s \\sum^s_{\\tau=1}{I(s-\\tau)g(\\tau)}}\n",
     "\\end{equation}"
    ]
   },
@@ -590,7 +598,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suppose today is $T$. If we bump $\\Delta C(T+\\Delta t)\\,(1\\le \\Delta t\\le L)$, impact on $I(s)\\,(s\\le T)$ is"
+    "We try two methods. The second method seems to work better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suppose today is $T$. If we bump $C(T+\\Delta t)$ by $\\Delta C(T+\\Delta t)\\,(1\\le \\Delta t\\le L)$, impact on $I(s)\\,(s\\le T)$ is"
    ]
   },
   {
@@ -646,7 +668,8 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "StdDev(\\Delta R_t)_{\\Delta t=t-T}=\\sqrt{\\sum^{L}_{\\Delta \\tau=1} \\sum^{L}_{\\Delta s=1} \\frac{\\Delta R_t}{\\Delta C(t+\\Delta\\tau)} \\frac{\\Delta R_t}{\\Delta C(t+\\Delta s)} Cov(\\Delta C_{\\Delta \\tau}, \\Delta C_{\\Delta s})}\n",
+    "StdDev(\\Delta R_t)_{\\Delta t=t-T}\\\\\n",
+    "=\\sqrt{\\sum^{L}_{\\Delta \\tau=1} \\sum^{L}_{\\Delta s=1} \\frac{\\Delta R_t}{\\Delta C(t+\\Delta\\tau)} \\frac{\\Delta R_t}{\\Delta C(t+\\Delta s)} Cov(\\Delta C_{\\Delta \\tau}, \\Delta C_{\\Delta s})}\n",
     "\\end{equation}\n"
    ]
   },
@@ -709,6 +732,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Second method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us assmet that confirmed cases distribute lognorrmally with a shift of 0.5. The rationaire of the 0.5 shift is that a test to detect infection has a threshold. If a measurement exceeds the threshold, its result is positive while negative if the measurement is under the threshold. Hence, a negative result implies the measuremnt is something between 0 and the threshold. Without prior information. Expectation given the zero case is 0.5. Similarly, I treat $C(t)$ as $C(t)+0.5$.\n",
+    "\n",
+    "Because $C(t)$ has noise, the lognormal standard deviation for time interval $\\Delta t$ is estimated with $I(t)$ as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "Std_{LN}(\\Delta t) = \\sqrt{\\bigg \\langle \\left( \\ln \\frac{I(t+\\Delta t)}{I(t)} \\right)^2 \\bigg \\rangle_{sample}}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we simulate the case of $\\pm \\sigma$ cases.\n",
+    "Suppose today is $T$. If we bump $C(T+\\Delta t)\\,(1\\le \\Delta t\\le L)$,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "C(T+\\Delta t)+\\Delta C(T+\\Delta t)+0.5=(C(T+\\Delta t)+0.5)\\exp(\\pm Std_{LN}(\\Delta t))\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where we should be careful not to explode $\\exp(Std_{LN}(\\Delta t))$.\n",
+    "Given the bumped cases $C_\\pm(T+\\Delta t) = C(T+\\Delta t)+\\Delta C(T+\\Delta t)$, we compute $R^{\\pm}_t\\,(T-L\\le t\\le T)$. Together with $R^{\\pm}_t$ for $0-\\sigma$ case, we have three sampling points at $0-\\sigma$ and $\\pm\\sigma$. We approximate the distribution of $R_t$ with log-normal distribution. If $C(t)$ completely obeyed the log-normal distribution, $C(t+\\Delta t) \\simeq C(t)\\exp(\\sigma_{\\Delta t} W_{\\Delta t}-\\frac{1}{2}\\sigma^2_{\\Delta t})$, infecteds would also obey log-normally, $I(t+\\Delta t) \\simeq I(t)\\exp(\\sigma_{\\Delta t} W_{\\Delta t}-\\frac{1}{2}\\sigma^2_{\\Delta t})$, thus $R_t$ would also obey log-normally, $R_t \\simeq \\langle \\exp(\\sigma_{\\Delta t} W_{\\Delta t}-\\frac{1}{2}\\sigma^2_{\\Delta t}) \\rangle_{\\Delta t} \\simeq \\exp(\\sigma_{\\tau} W_{\\tau}-\\frac{1}{2}\\sigma^2_{\\tau})$ where $\\tau$ is the expected serial interval.\n",
+    "We have three sampling points but a log-normally distributed value has only two parameters (mean and std). Thus, we introduce a shift as an additional parameter $R_t - b = (R_0 - b) \\exp(\\sigma W - \\frac{1}{2}\\sigma^2)$. Minimum value of $R_t$ is $b$. From the sampling points,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "R^{+}_t - b = (R_0 - b) \\exp\\left(\\sigma - \\frac{1}{2}\\sigma^2\\right)\\\\\n",
+    "R_t - b = (R_0 - b) \\exp\\left(- \\frac{1}{2}\\sigma^2\\right)\\\\\n",
+    "R^{-}_t - b = (R_0 - b) \\exp\\left(-\\sigma - \\frac{1}{2}\\sigma^2\\right)\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "b = -\\frac{R^2_t - R^{+}_t R^{-}_t} {2 R_t - R^{+}_t - R^{-}_t}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The distribution has no probability for $R_t \\le b$. To make $R_t=0$ theoretically possible, we floor $b$ by 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "R_0 = b + (R_t - b) \\exp\\left(\\frac{1}{2}\\sigma^2\\right)\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, the distribution of $R_t$ is approximated with"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "P_{R_t}(r)=\\frac{1}{\\sqrt{2\\pi}\\sigma} \\exp\\left[-\\frac{1}{2\\sigma^2}\\left(\\ln\\frac{r-b}{R_0-b}-\\frac{1}{2}\\sigma^2 \\right)^2 \\right]\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly to the first method, we normalize the probability distribution in $[0,\\infty]$ and replace $P(R_t|\\{I(s),s\\le t\\})$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\\begin{thebibliography}{1}\n",
     "\\bibitem{NishiuraGitHub} \n",
     "Calculating Rt using Maximum likelihood estimation\n",
@@ -739,6 +886,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -757,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
