--- a/doc/Rt-Malaysia.ipynb
+++ b/doc/Rt-Malaysia.ipynb
@@ -739,7 +739,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us assmet that confirmed cases distribute lognorrmally with a shift of 0.5. The rationaire of the 0.5 shift is that a test to detect infection has a threshold. If a measurement exceeds the threshold, its result is positive while negative if the measurement is under the threshold. Hence, a negative result implies the measuremnt is something between 0 and the threshold. Without prior information. Expectation given the zero case is 0.5. Similarly, I treat $C(t)$ as $C(t)+0.5$.\n",
+    "Let us assume that confirmed cases distribute lognorrmally with a shift of 0.5. The rationaire of the 0.5 shift is that a test to detect infection has a threshold. If a measurement exceeds the threshold, its result is positive while negative if the measurement is under the threshold. Hence, a negative result implies the measuremnt is something between 0 and the threshold. Without prior information. Expectation given the zero case is 0.5. Similarly, I treat $C(t)$ as $C(t)+0.5$.\n",
     "\n",
     "Because $C(t)$ has noise, the lognormal standard deviation for time interval $\\Delta t$ is estimated with $I(t)$ as"
    ]
